--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing products</h1>
+<h1>Список товаров</h1>
 
 <table>
 <% @products.each do |product|%>
@@ -14,10 +14,10 @@
 			</dl>
 		</td>
 		<td class="list_actions">
-			<%= link_to 'Show', product%><br/>
-			<%= link_to 'Edit', edit_product_path(product) %><br/>
-			<%= link_to 'Destroy', product,
-				confirm: 'Are you sure?',
+			<%= link_to 'Просмотр', product%><br/>
+			<%= link_to 'Редактировать', edit_product_path(product) %><br/>
+			<%= link_to 'Удалить', product,
+				confirm: 'Действительно удалить?',
 				method: :delete %>
 		</td>
 	</tr>
@@ -26,4 +26,4 @@
 
 <br />
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'Добавить товар', new_product_path %>
