product cart added

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -9,8 +9,8 @@
     color: #226;
     border-bottom: 3px dotted #77d;
   }
-
- /* Запись в каталоге store */
+  
+   /* Запись в каталоге store */
   .entry {
     overflow: auto;
     margin-top: 1em;
@@ -39,6 +39,15 @@
         color: #44a;
         font-weight: bold;
         margin-right: 3em;
+      }
+      p, div.price_line {
+        margin-left: 100px;
+        margin-top: 0.5em;
+        margin-bottom: 0.8em;
+        
+        form, div {
+          display: inline;
+        }
       }
   }
 }
