--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,9 +2,20 @@
 	<p id="notice"><%= notice %></p>
 <% end %>
 
-<h2>Корзина</h2>
-<ul>
+<div class="cart_title">Корзина</div>
+<table>
 	<% @cart.line_items.each do |item| %>
-		<li><%= item.product.title %></li>
+		<tr>
+			<td><%= item.quantity %> &times;</td>
+			<td><%= item.product.title %></td>
+			<td class="item_price"><%= number_to_currency(item.total_price, unit: 'руб.', format: "%n %u") %></td>
+			<td><%= button_to 'Убрать позицию', item, method: :delete %></td>			
+		</tr>
 	<% end %>
-</ul>
+	<tr class="total_line">
+		<td colspan="2">Итого</td>
+		<td class="total_cell"><%= number_to_currency(@cart.total_price, unit: 'руб.', format: "%n %u") %></td>
+	</tr>
+</table>
+<%= button_to 'Очистить корзину', @cart, method: :delete,
+ 	confirm: 'Действительно очистить корзину?' %>
