--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
  	background: #141;
 
  	#main {
- 		margin-left: 17em;
+ 		margin-left: 30em;
  		padding: 1em;
  		background: white;
  	}
@@ -45,9 +45,27 @@
  	#side {
  		float: left;
  		padding: 1em 2em;
- 		width: 13em;
+ 		width: 26em;
  		background: #141;
  		color: #bfb;
+ 		
+ 		form, div {
+ 		  display: inline;
+ 		} 
+ 		input {
+ 		  font-size: small;
+ 		}
+ 		#cart {
+ 		  font-size: smaller;
+ 		  color: white;
+ 		  table {
+ 		    border-top: 1px dotted #595;
+ 		    border-bottom: 1px dotted #595;
+ 		    margin-bottom: 10px;
+ 		  }
+ 		}
+ 		
+ 		
  		ul {
 	 		padding: 0;
  			li {
