--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
 	<div id="columns">
 		<div id="side">
 			<%= Time.now.strftime("%d.%m.%Y %H:%M") %>
+			<div id="cart">
+				<%= render @cart %>
+			</div>
 			<ul>
 				<li><a href="/">Домашняя</a></li>
 				<li><a href="">Вопросы</a></li>
