--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,6 +1,10 @@
+<% if line_item == @current_item %>
+<tr id="current_item">
+<% else%>
 <tr>
+<% end %>
 	<td><%= line_item.quantity %> &times;</td>
 	<td><%= line_item.product.title %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price, unit: 'руб.', format: "%n %u") %></td>
-	<td><%= button_to 'Убрать позицию', line_item, method: :delete %></td>			
+	<td><%= button_to 'Убрать позицию', line_item, method: :delete, remote: true %></td>			
 </tr>
