--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,7 +9,7 @@
 		<%= sanitize(product.description) %>
 		<div class="price_line">
 			<span class="price"><%= number_to_currency(product.price, unit: 'руб.', format: "%n %u") %></span>
-			<%= button_to 'Добавить в корзину', line_items_path(product_id: product) %>
+			<%= button_to 'Добавить в корзину', line_items_path(product_id: product), remote: true %>
 		</div>
 	</div>
 <% end %>	
