--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,10 @@
 	<div id="columns">
 		<div id="side">
 			<%= Time.now.strftime("%d.%m.%Y %H:%M") %>
-			<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-				<%= render @cart %>
+			<% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+					<%= render @cart %>
+				<% end %>
 			<% end %>
 			<ul>
 				<li><a href="/">Домашняя</a></li>
